pmd findings